--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 <body>
     <script src="https://code.jquery.com/jquery-2.1.0.js"></script>
     <script src="script.js"></script>
+    <div class="blok"></div>
     <p id="score">0 : 0</p>
+    <div class="blok" id="blok"></div>
 </body>
 </html>
